# borealis

./: CMakeLists.txt  README.md  borealis.nimble  com.rutins.Borealis.json  main.cc  main.cxx  meson.build
.flatpak-builder/checksums/: x86_64-com.rutins.Borealis.json
data/: com.rutins.Borealis.appdata.xml.in  com.rutins.Borealis.desktop.in  com.rutins.Borealis.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: borealis-application.c  borealis-application.h  borealis-window.blp  borealis-window.c  borealis-window.h  borealis.gresource.xml  borealis.nim  gsettings.nim  main.c  meson.build  window.cc  window.hh  window.ixx
src/util/: meson.build  uri.cc  uri.hh  uri.ixx
